--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 title: Clara Kelley # your name (or website title) here
 logo: "/images/headshot.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description
+  Senior in Computer Science - HCI at Stanford
   <br><br>
-  Second description
+  Seeking internship for 2020
   <br><br>
+  <a href="http://drive.google.com/file/d/1xA5N1OZfHpdeak7cYtcs9rZr-oZHdSyA">View my resume</a> 
 
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
