--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Clara Kelley # your name (or website title) here
 logo: "/images/headshot.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Senior in Computer Science - HCI at Stanford
+  Senior in Computer Science - HCI at Stanford 
+  1st Year Masters in Computer Science at Stanford
   <br><br>
   Seeking internship for 2020
   <br><br>
