--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
 title: Clara Kelley # your name (or website title) here
 logo: "/images/headshot.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Senior in Computer Science - HCI at Stanford 
+  1st Year Masters in Computer Science (HCI) at Stanford
   <br><br>
-  1st Year Masters in Computer Science at Stanford
+  Seeking full-time for fall 2021
   <br><br>
-  Seeking internship for 2020
-  <br><br>
-  <a href="http://drive.google.com/file/d/1spiiAkzTA5I-neS2YmgMLfgi70DOnIMP">View my resume</a> 
+  <a href="http://drive.google.com/file/d/1NVeZYKVLG1uXf35kDfMZBw4cCfR0VubD">View my resume</a> 
 
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
